--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     container_name: python_container
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Docker/Dockerfile
     depends_on:
       - postgres
     command: tail -f /dev/null  ## This is a dummy command that keeps the container running
