--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   postgres:
-    container_name: postgres_personio
+    container_name: postgres
     image: postgres:latest
     restart: always
     ports:
